<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/login_bck"
        android:alpha="0.6"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        tools:context=".Activities.MainActivity"
        android:layout_alignParentLeft="true">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout_username"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="148dp"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditText_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/username_hint"
                android:inputType="textPersonName"
                android:backgroundTint="@color/colorPrimaryDark"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout_password"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="218dp"
            app:passwordToggleContentDescription="@string/password_hint"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimaryDark">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditText_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password_hint"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_login"
            style="@android:style/Widget.Holo.Light.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="106dp"
            android:text="@string/text_login"
            android:textColor="?attr/colorPrimaryDark"
            android:textSize="16sp"
            android:layout_alignParentLeft="true" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_link_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="70dp"
            android:lineSpacingExtra="8sp"
            android:shadowColor="@android:color/darker_gray"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:text="@string/text_not_member"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="?attr/colorPrimaryDark"
            android:textFontWeight="10dp"
            android:textSize="14sp" />



    </RelativeLayout>


</RelativeLayout>